--- a/dispatch/templates/dispatch/regularly_station.html
+++ b/dispatch/templates/dispatch/regularly_station.html
@@ -67,7 +67,7 @@
                     <td>{{station.latitude}}</td>
                     <td>{{station.longitude}}</td>
                     <td>{{station.references}}</td>
-                    <td>{{station.types}}</td>
+                    <td>{{station.station_type}}</td>
                 </tr>
                 {% endfor %}
                 <tr class="blanckTr"></tr>
