fix: 정류장 종류 1,2,3,a,b,c 수정, 정류장 팝업 종류 안 나오던 부분 수정

--- a/dispatch/templates/dispatch/regularly_route.html
+++ b/dispatch/templates/dispatch/regularly_route.html
@@ -564,12 +564,12 @@
                     <div class="stationSearchInputText">종류</div>
                     <select class="inputModules stationSearchSelect" name="type">
                         <option></option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="A">A</option>
-                        <option value="B">B</option>
-                        <option value="C">C</option>
+                        <option value="차고지">차고지</option>
+                        <option value="첫 정류장 대기장소">첫 정류장 대기장소</option>
+                        <option value="정류장">정류장</option>
+                        <option value="사업장">사업장</option>
+                        <option value="대기장소">대기장소</option>
+                        <option value="마지막 정류장">마지막 정류장</option>
                     </select>
                     <div class="btnModules stationSearchBtn">검색</div>
                 </div>
